fixed issue with overflow hidden

--- a/ui/css/template.css
+++ b/ui/css/template.css
@@ -66,13 +66,6 @@
     margin-top: 20px;
 }
 
-body {
-  overflow: hidden;
-  margin: 0;
-  font-size: 14px;
-  font-family: "Helvetica Neue", Helvetica;
-}
-
 #chart {
   position: absolute;
   top: 50px;
